# trash-island

./: .gitignore  classes.ini  meson.build  types.ini
src/: Assets.cc  Assets.hh  Chunk.cc  Chunk.hh  Dude.cc  Dude.hh  Input2DState.cc  Item.hh  State.cc  State.hh  Util.cc  Util.hh  World.cc  World.hh  const.hh  main.cc
